--- a/HTMLCSS4.html
+++ b/HTMLCSS4.html
@@ -16,6 +16,14 @@ background-image:url("https://images.pexels.com/photos/39396/hourglass-time-hour
   background-size: cover;
   min-height: 500px;
 }
+.parallax1{
+background-image:url("https://img.freepik.com/free-photo/time-passes-dissolves-concept-vanishing-time_76506-67.jpg?size=626&ext=jpg&ga=GA1.2.1262042268.1600214400");
+  background-attachment: fixed;
+  background-position: center
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 500px;
+}
     
 
 </style>
@@ -44,7 +52,7 @@ Time in physics is operationally defined as "what a clock reads".[6][15][16]
 The physical nature of time is addressed by general relativity with respect to events in space-time. Examples of events are the collision or two particles, the explosion of a supernova, or the arrival of a rocket ship. Every event can be assigned four numbers representing its time and position (the event's coordinates). However, the numerical values are different for different observers. In general relativity, the question of what time it is now only has meaning relative to a particular observer. Distance and time are intimately related and the time required for light to travel a specific distance is the same for all observers, as first publicly demonstrated by Michelson and Morley. General relativity does not address the nature of time for extremely small intervals where quantum mechanics holds. At this time, there is no generally accepted theory of quantum general relativity. [17]
 
 Time is one of the seven fundamental physical quantities in both the International System of Units (SI) and International System of Quantities. The SI base unit of time is the second. Time is used to define other quantities – such as velocity – so defining time in terms of such quantities would result in circularity of definition.[18] An operational definition of time, wherein one says that observing a certain number of repetitions of one or another standard cyclical event (such as the passage of a free-swinging pendulum) constitutes one standard unit such as the second, is highly useful in the conduct of both advanced experiments and everyday affairs of life. To describe observations of an event, a location (position in space) and time are typically noted.</p>
-<div class="parallax"></div>
+<div class="parallax1"></div>
 <div style="text-align:center;font-size:36px;height:50px;background-color:aqua;color:green">Time is like flow it never stops</div>
 <p>A large variety of devices have been invented to measure time. The study of these devices is called horology.[24]
 
